Simplify java args
- Rely more on defaults for modern Java
- String deduplication has been supported by ZGC since Java 18 (see OpenJDK wiki on it)